Sat Oct 29 10:09:38 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): turn flip-flop in a not-operator
	  into a boolean value.  fix up r56315

Sat Oct 29 09:39:14 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (vm_call0_body): follow the original class, not to
	  loop the prepended module.  [ruby-core:77784] [Bug #12876]

Sat Oct 29 00:14:30 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/trans/windows-1255-tbl.rb: update mapping from 0xCA to
	  U+05BA.  [Feature #12877]

Fri Oct 28 23:22:32 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/depend: extract transcode_tblgen method calls for libraries
	  loaded by dynamically generated names, in single_byte.trans.

Fri Oct 28 16:05:03 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* insns.def (opt_case_dispatch): extract float value only if the
	  Float method is not redefined.

Fri Oct 28 15:58:16 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h (RB_OBJ_BUILTIN_TYPE): special-const safe
	  BUILTIN_TYPE.

Fri Oct 28 15:20:18 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* complex.c (id_finite_p, id_infinite_p, id_rationalize, id_PI):
	  initialize static IDs.

	* complex.c (FINITE_TYPE_P): extract predicate.

	* complex.c (rb_complex_finite_p, rb_complex_infinite_p): use
	  dedicated predicates instead of switch by TYPE.

Thu Oct 27 23:28:12 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_integer_type_p): turn into macro to help
	  clang based on old gcc to eliminate CSE.

Thu Oct 27 16:33:47 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb (rel): check the exception and show right
	  message.

Thu Oct 27 14:57:33 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/socket/lib/socket.rb (UDPSocket#recvfrom_nonblock): [DOC] Remove
	  a false statement "If _maxlen_ is omitted, its default value is
	  65536." maxlen, the first parameter, cannot be omitted as the method